--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,26 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Schedule</title>
+    <title>スケジュール管理アプリ</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/themes/base/jquery-ui.min.css">
+
   </head>
 
   <body>
-    <%= yield %>
+    <header class="navbar-fixed-top navbar-inverse navbar center">
+      <h1>スケジュール管理アプリ</h1>
+    </header>
+    <div class="container">
+      <% if flash[:notice] %>
+        <p> <%= flash[:notice]%></p>
+      <% end %>
+      <%= yield %>
+    </div>
+
   </body>
 </html>
